# MPIS

./: .gitignore  README.md  camera_calib.py  config.ini  main.py  main_old.py  requirements.txt  template_config.ini
Module/MouseTracking/: CMakeLists.txt  setup.py
Module/MouseTracking/src/: mousetracking.cpp
docs/html/: MasterProjectMicrosocpeTracking.html
utils/: ball_tracking.py  calibration.py  camera_precision.py
